# madate-vault

./: .dockerignore  .gitignore  .vercelignore  ACP_IMPLEMENTATION_COMPLETE.md  AUDIT_EVENT_STANDARDS.md  CLOUD_DEPLOYMENT_OPTIONS.md  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMMANDS.sh  DEPLOYMENT_QUICK_START.txt  DEPLOY_FREE_NOW.md  DEPLOY_NOW.md  DEPLOY_TO_PRODUCTION.md  Dockerfile  FILE_REFERENCE.md  FREE_DEPLOYMENT_OPTIONS.md  MULTIPROTOCOL_COMPLETE.md  MULTIPROTOCOL_FILES_CHECKLIST.md  MULTIPROTOCOL_PROGRESS.md  PROJECT_STRUCTURE.md  QUICK_DEPLOY.md  README.md  REFACTOR_PLAN_MULTIPROTOCOL.md  START_DEPLOYMENT.md  START_HERE.md  TESTING_STRATEGY_RECOMMENDATION.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  env.example  index.html  landing.html  pyproject.toml  render.yaml  requirements.txt  run_dashboard.py  start.py  start.sh  vercel.json
.github/: README.md
.well-known/: security.txt
alembic/: env.py
app/: main.py
config/: alerts.yml  env.development.template  env.production.template  prometheus.yml
demos/: QUICK_START.md  README.md  demo_auth_flows.py  demo_complete_workflow.py  demo_complete_workflow_improved.py  demo_complete_workflow_realistic.py  demo_crud_operations.py  demo_error_handling.py  demo_lifecycle.py  demo_search_and_filter.py  demo_security_features.py  demo_webhook_delivery.py  test_retention_demo.py  test_verification_demo.py
docs/: MIGRATION_GUIDE.md  MULTIPROTOCOL_GUIDE.md  ONBOARDING.md  README.md
examples/: demo_jwt_verification.py  demo_monitoring_system.py  demo_webhook_system.py
k6/: README.md  analyze_results.js  demo_load_test.js  improved_load_test.py  load_test_mandates.js  quick_test.js  run_load_test.sh  simulate_load_test.py  validate_script.js
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
postman/: Mandate_Vault_Collection.json  README.md  environment.json  newman-run.sh  test-collection.py
public/: index.html
(+207 files in other folders)
